fixed gap between gallery and profile section

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -19,6 +19,5 @@
 
   .footer__copyright {
     font-size: 14px;
-    font-weight: 400;
   }
 }
