--- a/blocks/gallery.css
+++ b/blocks/gallery.css
@@ -54,7 +54,8 @@
 @media screen and (max-width: 637px) {
   .gallery {
     padding: 29px;
-    margin-top: 36px;
+    padding-top: 36px;
+    margin: 0;
     padding-bottom: 0;
   }
 }
