--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -116,7 +116,6 @@
   }
 
   .profile__name-container {
-    display: flex;
     justify-content: center;
   }
 
